--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,8 @@
 {
   "extends": "airbnb-base",
-  "env": {
-    "commonjs": true,
-    "es2021": true,
-    "node": true
-  },
   "rules": {
-    "no-console": "off",
-    "no-underscore-dangle": [
-      "error",
-      {
-        "allow": [
-          "_id"
-        ]
-      }
-    ],
-    "no-control-regex": 0,
-    "no-useless-escape": 0,
-    "func-names": [
-      "error",
-      "never"
-    ]
+    "no-underscore-dangle": ["error", {
+      "allow": ["_id"]
+    }]
   }
 }
